Reformated the bib.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1,267 +1,269 @@
 @article{Ansaloni_2020,
-  doi = {10.1038/s41467-020-20280-3},
-  url = {https://www.nature.com/articles/s41467-020-20280-3.pdf},
+  title = {Single-electron operations in a foundry-fabricated array of quantum dots},
+  author = {Fabio Ansaloni and Anasua Chatterjee and Heorhii Bohuslavskyi and Benoit Bertrand and Louis Hutin and Maud Vinet and Ferdinand Kuemmeth},
   year = {2020},
   month = dec,
-  publisher = {Springer Science and Business Media {LLC}},
+  doi = {10.1038/s41467-020-20280-3},
+  url = {https://www.nature.com/articles/s41467-020-20280-3.pdf},
   volume = {11},
   number = {1},
-  author = {Fabio Ansaloni and Anasua Chatterjee and Heorhii Bohuslavskyi and Benoit Bertrand and Louis Hutin and Maud Vinet and Ferdinand Kuemmeth},
-  title = {Single-electron operations in a foundry-fabricated array of quantum dots},
-  journal = {Nature Communications}
+  journal = {Nature Communications},
+  publisher = {Springer Science and Business Media {LLC}}
 }
 @article{Aspect_1980,
   title = {Absolute measurement of an atomic cascade rate using a two photon coincidence technique. {A}pplication to the 4p21{S}0 -4s4p 1{P}1 -4s21{S}0 cascade of calcium excited by a two photon absorption},
-  journal = {Optics Communications},
-  volume = {34},
-  number = {1},
-  pages = {46-52},
+  author = {A. Aspect and C. Imbert and G. Roger},
   year = {1980},
   issn = {0030-4018},
   doi = {10.1016/0030-4018(80)90157-1},
-  author = {A. Aspect and C. Imbert and G. Roger},
+  volume = {34},
+  number = {1},
+  pages = {46-52},
+  journal = {Optics Communications}
 }
 @article{Aspect_1981,
-  title = {Experimental Tests of Realistic Local Theories via Bell's Theorem},
+  title = {Experimental Tests of Realistic Local Theories via {B}ell's Theorem},
   author = {Aspect, Alain and Grangier, Philippe and Roger, G\'erard},
-  journal = {Phys. Rev. Lett.},
+  year = {1981},
+  month = {Aug},
+  doi = {10.1103/PhysRevLett.47.460},
+  url = {https://journals.aps.org/prl/pdf/10.1103/PhysRevLett.47.460},
   volume = {47},
   issue = {7},
   pages = {460--463},
   numpages = {0},
-  year = {1981},
-  month = {Aug},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.47.460}
+  journal = {Phys. Rev. Lett.},
+  publisher = {American Physical Society}
 }
 @article{Aspect_1982a,
   title = {Experimental Realization of Einstein-Podolsky-Rosen-Bohm Gedankenexperiment: A New Violation of Bell's Inequalities},
   author = {Aspect, Alain and Grangier, Philippe and Roger, G\'erard},
-  journal = {Phys. Rev. Lett.},
+  year = {1982},
+  month = {Jul},
+  doi = {10.1103/PhysRevLett.49.91},
+  url = {https://journals.aps.org/prl/pdf/10.1103/PhysRevLett.49.91},
   volume = {49},
   issue = {2},
   pages = {91--94},
   numpages = {0},
-  year = {1982},
-  month = {Jul},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.49.91},
-  url = {https://www.researchgate.net/publication/228109475_Experimental_Realization_of_Einstein-Podolsky-Rosen-Bohm_Gedankenexperiment_A_New_Violation_of_Bell%27s_Inequalities}
+  journal = {Phys. Rev. Lett.},
+  publisher = {American Physical Society}
 }
 @article{Aspect_1982b,
-  title = {Experimental Test of Bell's Inequalities Using Time-Varying Analyzers},
+  title = {Experimental Test of {B}ell's Inequalities Using Time-Varying Analyzers},
   author = {Aspect, Alain and Dalibard, Jean and Roger, G\'erard},
-  journal = {Phys. Rev. Lett.},
+  year = {1982},
+  month = {Dec},
+  doi = {10.1103/PhysRevLett.49.1804},
+  url = {https://journals.aps.org/prl/pdf/10.1103/PhysRevLett.49.1804},
   volume = {49},
   issue = {25},
   pages = {1804--1807},
   numpages = {0},
-  year = {1982},
-  month = {Dec},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.49.1804},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.49.1804}
+  journal = {Phys. Rev. Lett.},
+  publisher = {American Physical Society}
 }
 @article{BIGBell_2018,
    title={Challenging local realism with human choices},
    author={BIG Bell Test Collaboration},
-   volume={557},
-   ISSN={1476-4687},
-   url={https://arxiv.org/abs/1805.04431},
-   DOI={10.1038/s41586-018-0085-3},
-   number={7704},
-   journal={Nature},
-   publisher={Springer Science and Business Media LLC},
    year={2018},
    month={May},
-   pages={212–216}
+   ISSN={1476-4687},
+   DOI={10.1038/s41586-018-0085-3},
+   eprint={1805.04431},
+   volume={557},
+   number={7704},
+   pages={212–216},
+   journal={Nature},
+   publisher={Springer Science and Business Media LLC}
 }
 @article{Elzerman_2004,
    title={Single-shot read-out of an individual electron spin in a quantum dot},
    author={Elzerman, J. M. and Hanson, R. and Willems van Beveren, L. H. and Witkamp, B. and Vandersypen, L. M. K. and Kouwenhoven, L. P.},
    year={2004},
-   volume={430},
+   month={Jul},
    ISSN={1476-4687},
    eprint={cond-mat/0411232},
    DOI={10.1038/nature02693},
+   volume={430},
    number={6998},
+   pages={431–435},
    journal={Nature},
-   publisher={Springer Science and Business Media LLC},
-   month={Jul},
-   pages={431–435}
+   publisher={Springer Science and Business Media LLC}
 }
 @article{Gambetta_2017,
    title={Building logical qubits in a superconducting quantum computing system},
-   volume={3},
-   ISSN={2056-6387},
-   DOI={10.1038/s41534-016-0004-0},
-   number={1},
-   journal={npj Quantum Information},
-   publisher={Springer Science and Business Media LLC},
    author={Gambetta, Jay M. and Chow, Jerry M. and Steffen, Matthias},
    year={2017},
-   month={Jan}
+   month={Jan},
+   ISSN={2056-6387},
+   DOI={10.1038/s41534-016-0004-0},
+   url={https://www.nature.com/articles/s41534-016-0004-0.pdf},
+   volume={3},
+   number={1},
+   journal={npj Quantum Information},
+   publisher={Springer Science and Business Media LLC}
 }
 @article{Ghosh_1987,
   title = {Observation of nonclassical effects in the interference of two photons},
   author = {Ghosh, R. and Mandel, L.},
+  year = {1987},
+  month = {Oct},
+  doi = {10.1103/PhysRevLett.59.1903},
   journal = {Phys. Rev. Lett.},
   volume = {59},
   issue = {17},
   pages = {1903--1905},
   numpages = {0},
-  year = {1987},
-  month = {Oct},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.59.1903}
+  publisher = {American Physical Society}
 }
 @article{Giustina_2015,
   title = {Significant-Loophole-Free Test of Bell's Theorem with Entangled Photons},
   author = {Giustina, Marissa and Versteegh, Marijn A. M. and Wengerowsky, S\"oren and others},
   authors = {Marissa Giustina and Marijn A.{\hspace{0.167em}}M. Versteegh and S\"{o}ren Wengerowsky and Johannes Handsteiner and Armin Hochrainer and Kevin Phelan and Fabian Steinlechner and Johannes Kofler and Jan-{\AA}ke Larsson and Carlos Abell{\'{a}}n and Waldimar Amaya and Valerio Pruneri and Morgan W. Mitchell and J\"{o}rn Beyer and Thomas Gerrits and Adriana E. Lita and Lynden K. Shalm and Sae Woo Nam and Thomas Scheidl and Rupert Ursin and Bernhard Wittmann and Anton Zeilinger},
-  journal = {Phys. Rev. Lett.},
+  year = {2015},
+  month = {Dec},
+  doi = {10.1103/PhysRevLett.115.250401},
+  eprint = {1511.03190},
   volume = {115},
   issue = {25},
   pages = {250401},
   numpages = {7},
-  year = {2015},
-  month = {Dec},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.115.250401},
-  url = {https://arxiv.org/abs/1511.03190}
+  journal = {Phys. Rev. Lett.},
+  publisher = {American Physical Society}
 }
 @article{Hensen_2015,
-  doi = {10.1038/nature15759},
-  url = {https://arxiv.org/abs/1508.05949},
+  title = {Loophole-free Bell inequality violation using electron spins separated by 1.3 kilometres},
+  author = {B. Hensen and H. Bernien and A. E. Dr{\'{e}}au and A. Reiserer and N. Kalb and M. S. Blok and J. Ruitenberg and R. F. L. Vermeulen and R. N. Schouten and C. Abell{\'{a}}n and W. Amaya and V. Pruneri and M. W. Mitchell and M. Markham and D. J. Twitchen and D. Elkouss and S. Wehner and T. H. Taminiau and R. Hanson},
   year = {2015},
   month = oct,
-  publisher = {Springer Science and Business Media {LLC}},
+  doi = {10.1038/nature15759},
+  eprint = {1508.05949},
   volume = {526},
   number = {7575},
   pages = {682--686},
-  author = {B. Hensen and H. Bernien and A. E. Dr{\'{e}}au and A. Reiserer and N. Kalb and M. S. Blok and J. Ruitenberg and R. F. L. Vermeulen and R. N. Schouten and C. Abell{\'{a}}n and W. Amaya and V. Pruneri and M. W. Mitchell and M. Markham and D. J. Twitchen and D. Elkouss and S. Wehner and T. H. Taminiau and R. Hanson},
-  title = {Loophole-free Bell inequality violation using electron spins separated by 1.3 kilometres},
-  journal = {Nature}
+  journal = {Nature},
+  publisher = {Springer Science and Business Media {LLC}}
 }
 @article{Kwiat_1995,
   title = {New High-Intensity Source of Polarization-Entangled Photon Pairs},
   author = {Kwiat, Paul G. and Mattle, Klaus and Weinfurter, Harald and Zeilinger, Anton and Sergienko, Alexander V. and Shih, Yanhua},
-  journal = {Phys. Rev. Lett.},
+  year = {1995},
+  month = {Dec},
+  doi = {10.1103/PhysRevLett.75.4337},
+  url = {https://www.researchgate.net/publication/13230395_New_High-Intensity_Source_of_Polarization-Entangled_Photon_Pairs},
   volume = {75},
   issue = {24},
   pages = {4337--4341},
   numpages = {0},
-  year = {1995},
-  month = {Dec},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.75.4337},
-  url = {https://www.researchgate.net/publication/13230395_New_High-Intensity_Source_of_Polarization-Entangled_Photon_Pairs}
+  journal = {Phys. Rev. Lett.},
+  publisher = {American Physical Society}
 }
 @article{LaRose_2019,
-  doi = {10.22331/q-2019-03-25-130},
-  url = {https://arxiv.org/abs/1807.02500},
   title = {Overview and {C}omparison of {G}ate {L}evel {Q}uantum {S}oftware {P}latforms},
   author = {LaRose, Ryan},
-  journal = {{Quantum}},
+  year = {2019},
+  month = mar,
   issn = {2521-327X},
-  publisher = {{Verein zur F{\"{o}}rderung des Open Access Publizierens in den Quantenwissenschaften}},
+  doi = {10.22331/q-2019-03-25-130},
+  eprint = {1807.02500},
   volume = {3},
   pages = {130},
-  month = mar,
-  year = {2019}
+  journal = {{Quantum}},
+  publisher = {{Verein zur F{\"{o}}rderung des Open Access Publizierens in den Quantenwissenschaften}}
 }
 @article{Loss_1998,
-  doi = {10.1103/physreva.57.120},
-  url = {https://journals.aps.org/pra/pdf/10.1103/PhysRevA.57.120},
+  title = {Quantum computation with quantum dots},
+  author = {Daniel Loss and David P. DiVincenzo},
   year = {1998},
   month = jan,
-  publisher = {American Physical Society ({APS})},
+  doi = {10.1103/physreva.57.120},
+  url = {https://journals.aps.org/pra/pdf/10.1103/PhysRevA.57.120},
   volume = {57},
   number = {1},
   pages = {120--126},
-  author = {Daniel Loss and David P. DiVincenzo},
-  title = {Quantum computation with quantum dots},
-  journal = {Physical Review A}
+  journal = {Physical Review A},
+  publisher = {American Physical Society ({APS})}
 }
 @article{Petit_2020,
-  doi = {10.1038/s41586-020-2170-7},
-  url = {https://www.researchgate.net/publication/336510543_Universal_quantum_logic_in_hot_silicon_qubits},
+  title = {Universal quantum logic in hot silicon qubits},
+  author = {L. Petit and H. G. J. Eenink and M. Russ and W. I. L. Lawrie and N. W. Hendrickx and S. G. J. Philips and J. S. Clarke and L. M. K. Vandersypen and M. Veldhorst},
   year = {2020},
   month = apr,
-  publisher = {Springer Science and Business Media {LLC}},
+  doi = {10.1038/s41586-020-2170-7},
+  url = {https://www.researchgate.net/publication/336510543_Universal_quantum_logic_in_hot_silicon_qubits},
   volume = {580},
   number = {7803},
   pages = {355--359},
-  author = {L. Petit and H. G. J. Eenink and M. Russ and W. I. L. Lawrie and N. W. Hendrickx and S. G. J. Philips and J. S. Clarke and L. M. K. Vandersypen and M. Veldhorst},
-  title = {Universal quantum logic in hot silicon qubits},
-  journal = {Nature}
+  journal = {Nature},
+  publisher = {Springer Science and Business Media {LLC}}
 }
 @article{Preskill_2018,
   title = {Quantum {C}omputing in the {NISQ} era and beyond},
   author = {Preskill, John},
   year = {2018},
+  month = aug,
+  issn = {2521-327X},
   doi = {10.22331/q-2018-08-06-79},
   eprint = {1801.00862v3},
-  journal = {{Quantum}},
-  issn = {2521-327X},
-  publisher = {{Verein zur F{\"{o}}rderung des Open Access Publizierens in den Quantenwissenschaften}},
   volume = {2},
   pages = {79},
-  month = aug
+  journal = {{Quantum}},
+  publisher = {{Verein zur F{\"{o}}rderung des Open Access Publizierens in den Quantenwissenschaften}}
 }
 @article{Shalm_2015,
   title = {Strong Loophole-Free Test of Local Realism},
   author = {Shalm, Lynden K. and Meyer-Scott, Evan and Christensen, Bradley G. and others},
   authors = {Shalm, Lynden K. and Meyer-Scott, Evan and Christensen, Bradley G. and Bierhorst, Peter and Wayne, Michael A. and Stevens, Martin J. and Gerrits, Thomas and Glancy, Scott and Hamel, Deny R. and Allman, Michael S. and Coakley, Kevin J. and Dyer, Shellee D. and Hodge, Carson and Lita, Adriana E. and Verma, Varun B. and Lambrocco, Camilla and Tortorici, Edward and Migdall, Alan L. and Zhang, Yanbao and Kumor, Daniel R. and Farr, William H. and Marsili, Francesco and Shaw, Matthew D. and Stern, Jeffrey A. and Abell\'an, Carlos and Amaya, Waldimar and Pruneri, Valerio and Jennewein, Thomas and Mitchell, Morgan W. and Kwiat, Paul G. and Bienfang, Joshua C. and Mirin, Richard P. and Knill, Emanuel and Nam, Sae Woo},
-  journal = {Phys. Rev. Lett.},
+  year = {2015},
+  month = {Dec},
+  doi = {10.1103/PhysRevLett.115.250402},
+  url = {https://journals.aps.org/prl/pdf/10.1103/PhysRevLett.115.250402},
   volume = {115},
   issue = {25},
   pages = {250402},
   numpages = {10},
-  year = {2015},
-  month = {Dec},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.115.250402},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.115.250402}
+  journal = {Phys. Rev. Lett.},
+  publisher = {American Physical Society}
 }
 @article{Vandersypen_2004,
    title={Real-time detection of single-electron tunneling using a quantum point contact},
    author={Vandersypen, L. M. K. and Elzerman, J. M. and Schouten, R. N. and Willems van Beveren, L. H. and Hanson, R. and Kouwenhoven, L. P.},
-   volume={85},
-   ISSN={0003-6951},
-   eprint={cond-mat/0407121},
-   DOI={10.1063/1.1815041},
-   number={19},
-   journal={Applied Physics Letters},
-   publisher={AIP Publishing},
    year={2004},
-   pages={4394}
+   ISSN={0003-6951},
+   DOI={10.1063/1.1815041},
+   eprint={cond-mat/0407121},
+   volume={85},
+   number={19},
+   pages={4394},
+   journal={Applied Physics Letters},
+   publisher={AIP Publishing}
 }
 @article{Weihs_1998,
   title = {Violation of Bell's Inequality under Strict Einstein Locality Conditions},
   author = {Weihs, Gregor and Jennewein, Thomas and Simon, Christoph and Weinfurter, Harald and Zeilinger, Anton},
-  journal = {Phys. Rev. Lett.},
+  year = {1998},
+  month = {Dec},
+  doi = {10.1103/PhysRevLett.81.5039},
+  eprint = {quant-ph/9810080},
   volume = {81},
   issue = {23},
   pages = {5039--5043},
   numpages = {0},
-  year = {1998},
-  month = {Dec},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.81.5039},
-  url = {https://arxiv.org/abs/quant-ph/9810080}
+  journal = {Phys. Rev. Lett.},
+  publisher = {American Physical Society}
 }
 @article{Zurek2003,
   title = {Decoherence, einselection, and the quantum origins of the classical},
   author = {Zurek, Wojciech Hubert},
-  journal = {Rev. Mod. Phys.},
+  year = {2003},
+  month = {May},
+  doi = {10.1103/RevModPhys.75.715},
+  eprint = {quant-ph/0105127},
   volume = {75},
   issue = {3},
   pages = {715--775},
   numpages = {0},
-  year = {2003},
-  month = {May},
-  publisher = {American Physical Society},
-  doi = {10.1103/RevModPhys.75.715},
-  url = {https://arxiv.org/abs/quant-ph/0105127}
+  journal = {Rev. Mod. Phys.},
+  publisher = {American Physical Society}
 }
