--- a/source/biblio/lectures.bib
+++ b/source/biblio/lectures.bib
@@ -1,7 +1,7 @@
 @MISC{LMUQH2021,
 	AUTHOR = {Aidelsburger, Monika},
 	YEAR = {W 2020/2021},
-	TITLE = {Quantum Hardware},
+	TITLE = {Quantum {H}ardware},
     ORGANIZATION = {Ludwig Maximilian University},
     HOWPUBLISHED = {Lectures in Quantum Science and Technology at Ludwig Maximilian University},
     URL={https://www.ph.tum.de/academics/org/cc/mh/PH1009/}
@@ -9,7 +9,7 @@
 @MISC{TUMQI2021,
 	AUTHOR = {Cirac, Ignacio},
 	YEAR = {W 2020/2021},
-	TITLE = {Quantum Information},
+	TITLE = {Quantum {I}nformation},
     ORGANIZATION = {Technical University of Munich},
     HOWPUBLISHED = {Lectures in Quantum Science and Technology at Technical University of Munich},
     URL={https://www.ph.tum.de/academics/org/cc/mh/PH1010/}
