--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -1,5 +1,5 @@
 @article{Aspect_2015,
-  title = {Closing the Door on Einstein and Bohr’s Quantum Debate},
+  title = {Closing the Door on {E}instein and {B}ohr’s Quantum Debate},
   author = {Aspect, Alain},
   journal = {Physics},
   volume = {8},
