--- a/source/biblio/reviews.bib
+++ b/source/biblio/reviews.bib
@@ -1,109 +1,110 @@
 @article{Altman_2021,
-  doi = {10.1103/prxquantum.2.017003},
-  eprint = {1912.06938},
+  title = {Quantum Simulators: Architectures and Opportunities},
+  author = {Ehud Altman and Kenneth R. Brown and Giuseppe Carleo and others},
+  authors = {Ehud Altman and Kenneth R. Brown and Giuseppe Carleo and Lincoln D. Carr and Eugene Demler and Cheng Chin and Brian DeMarco and Sophia E. Economou and Mark A. Eriksson and Kai-Mei C. Fu and Markus Greiner and Kaden R.A. Hazzard and Randall G. Hulet and Alicia J. Koll{\'{a}}r and Benjamin L. Lev and Mikhail D. Lukin and Ruichao Ma and Xiao Mi and Shashank Misra and Christopher Monroe and Kater Murch and Zaira Nazario and Kang-Kuen Ni and Andrew C. Potter and Pedram Roushan and Mark Saffman and Monika Schleier-Smith and Irfan Siddiqi and Raymond Simmonds and Meenakshi Singh and I.B. Spielman and Kristan Temme and David S. Weiss and Jelena Vu{\v{c}}kovi{\'{c}} and Vladan Vuleti{\'{c}} and Jun Ye and Martin Zwierlein},
   year = {2021},
   month = feb,
+  doi = {10.1103/prxquantum.2.017003},
+  eprint = {1912.06938},
   publisher = {American Physical Society ({APS})},
   volume = {2},
   number = {1},
-  author = {Ehud Altman and Kenneth R. Brown and Giuseppe Carleo and others},
-  authors = {Ehud Altman and Kenneth R. Brown and Giuseppe Carleo and Lincoln D. Carr and Eugene Demler and Cheng Chin and Brian DeMarco and Sophia E. Economou and Mark A. Eriksson and Kai-Mei C. Fu and Markus Greiner and Kaden R.A. Hazzard and Randall G. Hulet and Alicia J. Koll{\'{a}}r and Benjamin L. Lev and Mikhail D. Lukin and Ruichao Ma and Xiao Mi and Shashank Misra and Christopher Monroe and Kater Murch and Zaira Nazario and Kang-Kuen Ni and Andrew C. Potter and Pedram Roushan and Mark Saffman and Monika Schleier-Smith and Irfan Siddiqi and Raymond Simmonds and Meenakshi Singh and I.B. Spielman and Kristan Temme and David S. Weiss and Jelena Vu{\v{c}}kovi{\'{c}} and Vladan Vuleti{\'{c}} and Jun Ye and Martin Zwierlein},
-  title = {Quantum Simulators: Architectures and Opportunities},
   journal = {{PRX} Quantum}
 }
 @article{Bloch_2008,
    title={Many-body physics with ultracold gases},
-   volume={80},
-   ISSN={1539-0756},
-   DOI={10.1103/revmodphys.80.885},
-   eprint={0704.3011},
-   number={3},
-   journal={Reviews of Modern Physics},
-   publisher={American Physical Society (APS)},
    author={Bloch, I. and Dalibard, J. and Zwerger, W.},
    year={2008},
    month={Jul},
-   pages={885–964}
+   ISSN={1539-0756},
+   DOI={10.1103/revmodphys.80.885},
+   eprint={0704.3011},
+   volume={80},
+   number={3},
+   pages={885–964},
+   journal={Reviews of Modern Physics},
+   publisher={American Physical Society (APS)}
 }
 @article{Bloch_2012,
   title = {Quantum simulations with ultracold quantum gases},
   author = {Immanuel Bloch and Jean Dalibard and Sylvain Nascimb{\`{e}}ne},
-  doi = {10.1038/nphys2259},
-  url = {https://www.researchgate.net/publication/232773948_Quantum_Simulations_with_Ultracold_Quantum_Gases},
   year = {2012},
   month = apr,
-  publisher = {Springer Science and Business Media {LLC}},
+  doi = {10.1038/nphys2259},
+  url = {https://www.researchgate.net/publication/232773948_Quantum_Simulations_with_Ultracold_Quantum_Gases},
   volume = {8},
   number = {4},
   pages = {267--276},
-  journal = {Nature Physics}
+  journal = {Nature Physics},
+  publisher = {Springer Science and Business Media {LLC}}
 }
 @article{Browaeys_2020,
    title={Many-body physics with individually controlled Rydberg atoms},
    author={Browaeys, Antoine and Lahaye, Thierry},
-   volume={16},
-   ISSN={1745-2481},
-   url={http://dx.doi.org/10.1038/s41567-019-0733-z},
-   DOI={10.1038/s41567-019-0733-z},
-   number={2},
-   journal={Nature Physics},
-   publisher={Springer Science and Business Media LLC},
    year={2020},
    month={Jan},
-   pages={132–142}
+   ISSN={1745-2481},
+   DOI={10.1038/s41567-019-0733-z},
+   eprint={2002.07413},
+   volume={16},
+   number={2},
+   pages={132–142},
+   journal={Nature Physics},
+   publisher={Springer Science and Business Media LLC}
 },
 @article{Georgescu_2014,
   title = {Quantum simulation},
   author = {Georgescu, I. M. and Ashhab, S. and Nori, Franco},
-  journal = {Rev. Mod. Phys.},
+  year = {2014},
+  month = {Mar},
+  doi = {10.1103/RevModPhys.86.153},
+  eprint = {1308.6253},
+  url = {https://www.researchgate.net/publication/256187028_Quantum_Simulation},
   volume = {86},
   issue = {1},
   pages = {153--185},
   numpages = {33},
-  year = {2014},
-  month = {Mar},
-  publisher = {American Physical Society},
-  doi = {10.1103/RevModPhys.86.153},
-  url = {https://www.researchgate.net/publication/256187028_Quantum_Simulation}
+  journal = {Rev. Mod. Phys.},
+  publisher = {American Physical Society}
 }
 @article{Kassal_2011,
   title = {Simulating Chemistry Using Quantum Computers},
   author = {Ivan Kassal and James D. Whitfield and Alejandro Perdomo-Ortiz and Man-Hong Yung and Al{\'{a}}n Aspuru-Guzik},
-  doi = {10.1146/annurev-physchem-032210-103512},
-  eprint = {1007.2648},
   year = {2011},
   month = may,
-  publisher = {Annual Reviews},
+  doi = {10.1146/annurev-physchem-032210-103512},
+  eprint = {1007.2648},
   volume = {62},
   number = {1},
   pages = {185--207},
-  journal = {Annual Review of Physical Chemistry}
+  journal = {Annual Review of Physical Chemistry},
+  publisher = {Annual Reviews}
 }
 @article{Kjaergaard_2020,
    title={Superconducting Qubits: Current State of Play},
-   volume={11},
-   ISSN={1947-5462},
-   url={http://dx.doi.org/10.1146/annurev-conmatphys-031119-050605},
-   DOI={10.1146/annurev-conmatphys-031119-050605},
-   number={1},
-   journal={Annual Review of Condensed Matter Physics},
-   publisher={Annual Reviews},
    author={Kjaergaard, M. and Schwartz, M. E. and Braumüller, J. and Krantz, P. and Wang, J. I.-J. and Gustavsson, S. and Oliver, W. D.},
    year={2020},
    month={Mar},
-   pages={369–395}
+   ISSN={1947-5462},
+   DOI={10.1146/annurev-conmatphys-031119-050605},
+   volume={11},
+   number={1},
+   pages={369–395},
+   journal={Annual Review of Condensed Matter Physics},
+   publisher={Annual Reviews}
 },
 @article{Krantz_2019,
    title={A quantum engineer’s guide to superconducting qubits},
-   volume={6},
-   ISSN={1931-9401},
-   url={https://www.researchgate.net/publication/333832447_A_quantum_engineer%27s_guide_to_superconducting_qubits},
-   DOI={10.1063/1.5089550},
-   number={2},
-   journal={Applied Physics Reviews},
-   publisher={AIP Publishing},
    author={Krantz, P. and Kjaergaard, M. and Yan, F. and Orlando, T. P. and Gustavsson, S. and Oliver, W. D.},
    year={2019},
    month={Jun},
+   ISSN={1931-9401},
+   DOI={10.1063/1.5089550},
+   eprint={1904.06560},
+   url={https://www.researchgate.net/publication/333832447_A_quantum_engineer%27s_guide_to_superconducting_qubits},
+   volume={6},
+   number={2},
+   journal={Applied Physics Reviews},
+   publisher={AIP Publishing},
    pages={021318}
 }
