Refined and split computing and simulation.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -10,6 +10,20 @@
   journal = {Nature Communications},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{Arute_2020,
+   title={Hartree-{F}ock on a superconducting qubit quantum computer},
+   author={Arute, Frank and Arya, Kunal and Babbush, Ryan and Bacon, Dave and Bardin, Joseph C. and Barends, Rami and Boixo, Sergio and Broughton, Michael and Buckley, Bob B. and et al.},
+   year={2020},
+   month={Aug},
+   ISSN={1095-9203},
+   eprint={2004.04174},
+   DOI={10.1126/science.abb9811},
+   volume={369},
+   number={6507},
+   pages={1084–1089},
+   journal={Science},
+   publisher={American Association for the Advancement of Science (AAAS)}
+}
 @article{Aspect_1980,
   title = {Absolute measurement of an atomic cascade rate using a two photon coincidence technique. {A}pplication to the 4p21{S}0 -4s4p 1{P}1 -4s21{S}0 cascade of calcium excited by a two photon absorption},
   author = {A. Aspect and C. Imbert and G. Roger},
@@ -145,13 +159,27 @@
   journal = {Nature},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{Kandala_2017,
+   title={Hardware-efficient variational quantum eigensolver for small molecules and quantum magnets},
+   author={Kandala, Abhinav and Mezzacapo, Antonio and Temme, Kristan and Takita, Maika and Brink, Markus and Chow, Jerry M. and Gambetta, Jay M.},
+   year={2017},
+   month={Sep},
+   ISSN={1476-4687},
+   DOI={10.1038/nature23879},
+   eprint={1704.05018},
+   volume={549},
+   number={7671},
+   pages={242–246},
+   journal={Nature},
+   publisher={Springer Science and Business Media LLC}
+}
 @article{Kwiat_1995,
   title = {New High-Intensity Source of Polarization-Entangled Photon Pairs},
   author = {Kwiat, Paul G. and Mattle, Klaus and Weinfurter, Harald and Zeilinger, Anton and Sergienko, Alexander V. and Shih, Yanhua},
   year = {1995},
   month = {Dec},
   doi = {10.1103/PhysRevLett.75.4337},
-  url = {https://www.researchgate.net/publication/13230395_New_High-Intensity_Source_of_Polarization-Entangled_Photon_Pairs},
+  url = {https://journals.aps.org/prl/pdf/10.1103/PhysRevLett.75.4337},
   volume = {75},
   issue = {24},
   pages = {4337--4341},
@@ -184,6 +212,19 @@
   pages = {120--126},
   journal = {Physical Review A},
   publisher = {American Physical Society ({APS})}
+}
+@article{OBrien_2019,
+   title={Calculating energy derivatives for quantum chemistry on a quantum computer},
+   author={O’Brien, Thomas E. and Senjean, Bruno and Sagastizabal, Ramiro and Bonet-Monroig, Xavier and Dutkiewicz, Alicja and Buda, Francesco and DiCarlo, Leonardo and Visscher, Lucas},
+   year={2019},
+   month={Dec},
+   ISSN={2056-6387},
+   DOI={10.1038/s41534-019-0213-4},
+   url={https://www.nature.com/articles/s41534-019-0213-4.pdf},
+   volume={5},
+   number={1},
+   journal={npj Quantum Information},
+   publisher={Springer Science and Business Media LLC},
 }
 @article{Petit_2020,
   title = {Universal quantum logic in hot silicon qubits},
