--- a/source/biblio/reviews.bib
+++ b/source/biblio/reviews.bib
@@ -5,6 +5,7 @@
   year = {2021},
   month = feb,
   doi = {10.1103/prxquantum.2.017003},
+  url = {https://journals.aps.org/prxquantum/pdf/10.1103/PRXQuantum.2.017003},
   eprint = {1912.06938},
   publisher = {American Physical Society ({APS})},
   volume = {2},
