Simulation, half formulated.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -10,6 +10,19 @@
   journal = {Nature Communications},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{ArguelloLuengo_2019,
+  title = {Analogue quantum chemistry simulation},
+  author = {Javier Arg\"{u}ello-Luengo and Alejandro Gonz{\'{a}}lez-Tudela and Tao Shi and Peter Zoller and J. Ignacio Cirac},
+  year = {2019},
+  month = oct,
+  doi = {10.1038/s41586-019-1614-4},
+  eprint = {1807.09228},
+  volume = {574},
+  number = {7777},
+  pages = {215--218},
+  journal = {Nature},
+  publisher = {Springer Science and Business Media {LLC}}
+}
 @article{Arute_2020,
    title={Hartree-{F}ock on a superconducting qubit quantum computer},
    author={Arute, Frank and Arya, Kunal and Babbush, Ryan and Bacon, Dave and Bardin, Joseph C. and Barends, Rami and Boixo, Sergio and Broughton, Michael and Buckley, Bob B. and et al.},
@@ -104,6 +117,19 @@
    pages={431–435},
    journal={Nature},
    publisher={Springer Science and Business Media LLC}
+}
+@article{Feynman_1982,
+  title = {Simulating physics with computers},
+  author = {Richard P. Feynman},
+  year = {1982},
+  month = jun,
+  doi = {10.1007/bf02650179},
+  pdf = {https://vql.cs.msu.ru/Feynman.pdf},
+  volume = {21},
+  number = {6-7},
+  pages = {467--488},
+  journal = {International Journal of Theoretical Physics},
+  publisher = {Springer Science and Business Media {LLC}}
 }
 @article{Gambetta_2017,
    title={Building logical qubits in a superconducting quantum computing system},
