--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -1,50 +1,56 @@
 @article{Aspect_2015,
   title = {Closing the Door on {E}instein and {B}ohr’s Quantum Debate},
   author = {Aspect, Alain},
-  journal = {Physics},
+  year = {2015},
+  url = {https://physics.aps.org/articles/v8/123},
   volume = {8},
   issue = {123},
-  year = {2015},
-  publisher = {American Physical Society},
-  url = {https://physics.aps.org/articles/v8/123},
+  journal = {Physics},
+  publisher = {American Physical Society}
 }
 @MISC{Clarke_2020,
+    title={Towards a Large-scale Quantum Computer Using Silicon Spin Qubits},
     author={Clarke, James},
     year={2020},
     month={Aug},
-    Title={Towards a Large-scale Quantum Computer Using Silicon Spin Qubits},
-    journal={Hot Chips 32 Conference},
+    URL={https://hotchips.org/archives/hc32/},
     howpublished={"Hot Chips 32" Conference Archive},
-    URL={https://hotchips.org/archives/hc32/}
+    journal={Hot Chips 32 Conference}
+}
+@MISC{IQCQH_2020,
+    title={Introduction to {Q}uantum {C}omputing and {Q}uantum {H}ardware},
+    author={IBM Quantum team},
+    year={2020},
+    url={http://qiskit.org/learn/intro-qc-qh}
 }
 @MISC{Jirauschek_2019,
+    title={Zentrum für {Q}uanten{E}ngineering ({ZQE}) {G}arching},
     author={Jirauschek, Christian},
     year={2019},
     month={Jul},
-    Title={Zentrum für {Q}uanten{E}ngineering ({ZQE}) {G}arching},
+    URL={https://wiki.tum.de/download/attachments/251625503/IndustryDay_Jirauschek.pdf},
     journal={Industry Day},
-    place={Munich},
-    URL={https://wiki.tum.de/download/attachments/251625503/IndustryDay_Jirauschek.pdf}
+    place={Munich}
 }
 @incollection{Meyer_2009,
-  author      = "Meyer, Carola",
   title       = "Quantum computing with semiconductor quantum dots",
-  editor      = "Blügel, S. and Morgenstern, M. and Bürgler, D. and Schneider, C. M. and Waser, R.",
-  booktitle   = "Spintronics - from GMR to quantum information: lecture notes of the 40th spring school 2009",
-  ISBN = {978-3-893-36559-3},
-  publisher   = "Forschungszentrum Jülich Zentralbibliothek",
-  address = {Jülich},
+  author      = "Meyer, Carola",
   year        = 2009,
-  chapter     = {X5},
+  ISBN = {978-3-893-36559-3},
   doi = {2128/3592},
-  url = {https://www.fz-juelich.de/SharedDocs/Downloads/PGI/PGI-6/EN/meyer_004.pdf}
+  url = {https://www.fz-juelich.de/SharedDocs/Downloads/PGI/PGI-6/EN/meyer_004.pdf},
+  chapter     = {X5},
+  booktitle   = "Spintronics - from GMR to quantum information: lecture notes of the 40th spring school 2009",
+  editor      = "Blügel, S. and Morgenstern, M. and Bürgler, D. and Schneider, C. M. and Waser, R.",
+  publisher   = "Forschungszentrum Jülich Zentralbibliothek",
+  address = {Jülich}
 }
 @article{Russell_2020,
+ title   = {Intel Connects the (Quantum) Dots in Accelerating Quantum Computing Effort},
  author  = {Russell, John},
  year = {2020},
  date    = {2020-08-19},
- title   = {Intel Connects the (Quantum) Dots in Accelerating Quantum Computing Effort},
- journal = {HPC wire},
+ urldate = {2021-04-03},
  url     = {https://www.hpcwire.com/2020/08/19/intel-connects-the-quantum-dots-in-accelerating-quantum-computing-effort/},
- urldate = {2021-04-03}
+ journal = {HPC wire}
 }
