--- a/source/biblio/reviews.bib
+++ b/source/biblio/reviews.bib
@@ -109,3 +109,17 @@
    publisher={AIP Publishing},
    pages={021318}
 }
+@article{Lewenstein_2007,
+   title={Ultracold atomic gases in optical lattices: mimicking condensed matter physics and beyond},
+   author={Lewenstein, Maciej and Sanpera, Anna and Ahufinger, Veronica and Damski, Bogdan and Sen(De), Aditi and Sen, Ujjwal},
+   year={2007},
+   month={Mar},
+   ISSN={1460-6976},
+   DOI={10.1080/00018730701223200},
+   eprint={cond-mat/0606771},
+   volume={56},
+   number={2},
+   pages={243–379},
+   journal={Advances in Physics},
+   publisher={Informa UK Limited}
+}
