Many small additions, mainly in intro.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -104,6 +104,20 @@
    journal={Nature},
    publisher={Springer Science and Business Media LLC}
 }
+@article{Boixo_2018,
+   title={Characterizing quantum supremacy in near-term devices},
+   author={Boixo, Sergio and Isakov, Sergei V. and Smelyanskiy, Vadim N. and Babbush, Ryan and Ding, Nan and Jiang, Zhang and Bremner, Michael J. and Martinis, John M. and Neven, Hartmut},
+   year={2018},
+   month={Apr},
+   ISSN={1745-2481},
+   DOI={10.1038/s41567-018-0124-x},
+   eprint={1608.00263},
+   volume={14},
+   number={6},
+   pages={595–600},
+   journal={Nature Physics},
+   publisher={Springer Science and Business Media LLC}
+}
 @article{Elzerman_2004,
    title={Single-shot read-out of an individual electron spin in a quantum dot},
    author={Elzerman, J. M. and Hanson, R. and Willems van Beveren, L. H. and Witkamp, B. and Vandersypen, L. M. K. and Kouwenhoven, L. P.},
