quantum gradients, tomography in superconducting computer.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -171,6 +171,19 @@
   numpages = {0},
   publisher = {American Physical Society}
 }
+@article{Gilyen_2019,
+   title={Optimizing quantum optimization algorithms via faster quantum gradient computation},
+   author={Gilyén, András and Arunachalam, Srinivasan and Wiebe, Nathan},
+   year={2019},
+   month={Jan},
+   ISBN={9781611975482},
+   DOI={10.1137/1.9781611975482.87},
+   eprint={1711.00465},
+   url={https://epubs.siam.org/doi/pdf/10.1137/1.9781611975482.87},
+   pages={1425–1444},
+   journal={Proceedings of the Thirtieth Annual ACM-SIAM Symposium on Discrete Algorithms},
+   publisher={Society for Industrial and Applied Mathematics}
+}
 @article{Giustina_2015,
   title = {Significant-Loophole-Free Test of Bell's Theorem with Entangled Photons},
   author = {Giustina, Marissa and Versteegh, Marijn A. M. and Wengerowsky, S\"oren and others},
@@ -252,6 +265,19 @@
   pages = {120--126},
   journal = {Physical Review A},
   publisher = {American Physical Society ({APS})}
+}
+@article{Mooney_2019,
+  title = {Entanglement in a 20-Qubit Superconducting Quantum Computer},
+  author = {Gary J. Mooney and Charles D. Hill and Lloyd C. L. Hollenberg},
+  year = {2019},
+  month = sep,
+  doi = {10.1038/s41598-019-49805-7},
+  url = {https://www.nature.com/articles/s41598-019-49805-7.pdf},
+  eprint = {1903.11747},
+  volume = {9},
+  number = {1},
+  journal = {Scientific Reports},
+  publisher = {Springer Science and Business Media {LLC}}
 }
 @article{OBrien_2019,
    title={Calculating energy derivatives for quantum chemistry on a quantum computer},
