--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -23,6 +23,19 @@
   journal = {Nature},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{Harrow_2009,
+   title={Quantum Algorithm for Linear Systems of Equations},
+   author={Harrow, Aram W. and Hassidim, Avinatan and Lloyd, Seth},
+   year={2009},
+   month={Oct},
+   ISSN={1079-7114},
+   DOI={10.1103/physrevlett.103.150502},
+   eprint={0811.3171},
+   volume={103},
+   number={15},
+   journal={Physical Review Letters},
+   publisher={American Physical Society (APS)}
+}
 @article{Arute_2020,
    title={Hartree-{F}ock on a superconducting qubit quantum computer},
    author={Arute, Frank and Arya, Kunal and Babbush, Ryan and Bacon, Dave and Bardin, Joseph C. and Barends, Rami and Boixo, Sergio and Broughton, Michael and Buckley, Bob B. and et al.},
@@ -145,6 +158,18 @@
   journal = {International Journal of Theoretical Physics},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{Gaitan_2020,
+  title = {Finding flows of a Navier-Stokes fluid through quantum computing},
+  author = {Frank Gaitan},
+  year = {2020},
+  month = jul,
+  doi = {10.1038/s41534-020-00291-0},
+  url = {https://www.nature.com/articles/s41534-020-00291-0.pdf},
+  volume = {6},
+  number = {1},
+  journal = {npj Quantum Information},
+  publisher = {Springer Science and Business Media {LLC}}
+}
 @article{Gambetta_2017,
    title={Building logical qubits in a superconducting quantum computing system},
    author={Gambetta, Jay M. and Chow, Jerry M. and Steffen, Matthias},
@@ -253,6 +278,20 @@
   journal = {{Quantum}},
   publisher = {{Verein zur F{\"{o}}rderung des Open Access Publizierens in den Quantenwissenschaften}}
 }
+@article{Lee_2019,
+   title={Hybrid quantum linear equation algorithm and its experimental test on IBM Quantum Experience},
+   author={Lee, Yonghae and Joo, Jaewoo and Lee, Soojoon},
+   year={2019},
+   month={Mar},
+   ISSN={2045-2322},
+   DOI={10.1038/s41598-019-41324-9},
+   url={https://www.nature.com/articles/s41598-019-41324-9.pdf},
+   eprint={1807.10651},
+   volume={9},
+   number={1},
+   journal={Scientific Reports},
+   publisher={Springer Science and Business Media LLC}
+}
 @article{Loss_1998,
   title = {Quantum computation with quantum dots},
   author = {Daniel Loss and David P. DiVincenzo},
@@ -318,6 +357,12 @@
   journal = {{Quantum}},
   publisher = {{Verein zur F{\"{o}}rderung des Open Access Publizierens in den Quantenwissenschaften}}
 }
+@misc{Ray_2019,
+  title={Towards Solving the Navier-Stokes Equation on Quantum Computers}, 
+  author={Navamita Ray and Tirtha Banerjee and Balasubramanya Nadiga and Satish Karra},
+  year={2019},
+  eprint={1904.09033}
+}
 @article{Shalm_2015,
   title = {Strong Loophole-Free Test of Local Realism},
   author = {Shalm, Lynden K. and Meyer-Scott, Evan and Christensen, Bradley G. and others},
@@ -332,6 +377,30 @@
   numpages = {10},
   journal = {Phys. Rev. Lett.},
   publisher = {American Physical Society}
+}
+@incollection{Steijl_2020,
+  title = {Quantum Algorithms for Fluid Simulations},
+  author = {Ren{\'{e}} Steijl},
+  year = {2020},
+  month = feb,
+  doi = {10.5772/intechopen.86685},
+  publisher = {{IntechOpen}},
+  booktitle = {Advances in Quantum Communication and Information}
+}
+@article{Vaitiekenas_2020,
+   title={Flux-induced topological superconductivity in full-shell nanowires},
+   author={Vaitiekėnas, S. and Winkler, G. W. and van Heck, B. and Karzig, T. and Deng, M.-T. and Flensberg, K. and Glazman, L. I. and Nayak, C. and Krogstrup, P. and Lutchyn, R. M. and et al.},
+   year={2020},
+   month={Mar},
+   ISSN={1095-9203},
+   DOI={10.1126/science.aav3392},
+   url={https://science.sciencemag.org/content/367/6485/eaav3392.full.pdf},
+   eprint={2003.13177},
+   volume={367},
+   number={6485},
+   journal={Science},
+   pages={eaav3392},
+   publisher={American Association for the Advancement of Science (AAAS)}
 }
 @article{Vandersypen_2004,
    title={Real-time detection of single-electron tunneling using a quantum point contact},
