intro: superconduction in MRI.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -415,6 +415,16 @@
    journal={Applied Physics Letters},
    publisher={AIP Publishing}
 }
+@ARTICLE{Lvovsky_2005,
+  title={Superconducting systems for MRI-present solutions and new trends}, 
+  author={Lvovsky, Y. and Jarvis, P.},
+  year={2005},
+  doi={10.1109/TASC.2005.849580},
+  volume={15},
+  number={2},
+  pages={1317-1325},
+  journal={IEEE Transactions on Applied Superconductivity}
+}
 @article{Weihs_1998,
   title = {Violation of Bell's Inequality under Strict Einstein Locality Conditions},
   author = {Weihs, Gregor and Jennewein, Thomas and Simon, Christoph and Weinfurter, Harald and Zeilinger, Anton},
