--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -224,6 +224,19 @@
   journal = {Phys. Rev. Lett.},
   publisher = {American Physical Society}
 }
+@article{Gidney_2021,
+   title={How to factor 2048 bit RSA integers in 8 hours using 20 million noisy qubits},
+   author={Gidney, Craig and Ekerå, Martin},
+   ISSN={2521-327X},
+   DOI={10.22331/q-2021-04-15-433},
+   eprint={1905.09749},
+   year={2021},
+   month={Apr},
+   volume={5},
+   pages={433},
+   journal={Quantum},
+   publisher={Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften}
+}
 @article{Hensen_2015,
   title = {Loophole-free Bell inequality violation using electron spins separated by 1.3 kilometres},
   author = {B. Hensen and H. Bernien and A. E. Dr{\'{e}}au and A. Reiserer and N. Kalb and M. S. Blok and J. Ruitenberg and R. F. L. Vermeulen and R. N. Schouten and C. Abell{\'{a}}n and W. Amaya and V. Pruneri and M. W. Mitchell and M. Markham and D. J. Twitchen and D. Elkouss and S. Wehner and T. H. Taminiau and R. Hanson},
