condmatter: 2 references from Bloch's lecture.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -264,6 +264,32 @@
    journal={Nature},
    publisher={Springer Science and Business Media LLC}
 }
+@article{Kane_1989,
+  title = {Motion of a single hole in a quantum antiferromagnet},
+  author = {Kane, C. L. and Lee, P. A. and Read, N.},
+  year = {1989},
+  month = {Apr},
+  doi = {10.1103/PhysRevB.39.6880},
+  volume = {39},
+  issue = {10},
+  pages = {6880--6897},
+  numpages = {0},
+  journal = {Phys. Rev. B},
+  publisher = {American Physical Society}
+}
+@article{Keimer_2015,
+  author = {B. Keimer and S. A. Kivelson and M. R. Norman and S. Uchida and J. Zaanen},
+  title = {From quantum matter to high-temperature superconductivity in copper oxides},
+  year = {2015},
+  month = feb,
+  doi = {10.1038/nature14165},
+  url = {http://uhp.iphy.ac.cn/article_list/2003_before/2015_Keimer_nature.pdf},
+  volume = {518},
+  number = {7538},
+  pages = {179--186},
+  journal = {Nature},
+  publisher = {Springer Science and Business Media {LLC}}
+}
 @article{Kwiat_1995,
   title = {New High-Intensity Source of Polarization-Entangled Photon Pairs},
   author = {Kwiat, Paul G. and Mattle, Klaus and Weinfurter, Harald and Zeilinger, Anton and Sergienko, Alexander V. and Shih, Yanhua},
