--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -23,6 +23,20 @@
   journal = {Nature},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{Biamonte_2017,
+   title={Quantum machine learning},
+   author={Biamonte, Jacob and Wittek, Peter and Pancotti, Nicola and Rebentrost, Patrick and Wiebe, Nathan and Lloyd, Seth},
+   year={2017},
+   month={Sep},
+   ISSN={1476-4687},
+   DOI={10.1038/nature23474},
+   eprint={1611.09347},
+   volume={549},
+   number={7671},
+   pages={195–202},
+   journal={Nature},
+   publisher={Springer Science and Business Media LLC}
+}
 @article{Harrow_2009,
    title={Quantum Algorithm for Linear Systems of Equations},
    author={Harrow, Aram W. and Hassidim, Avinatan and Lloyd, Seth},
