classical: one more Steijl.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -440,6 +440,15 @@
   publisher = {{IntechOpen}},
   booktitle = {Advances in Quantum Communication and Information}
 }
+@incollection{Steijl_2020a,
+  title = {Quantum Algorithms for Nonlinear Equations in Fluid Mechanics},
+  author = {Rene Steijl},
+  year = {2020},
+  month = dec,
+  doi = {10.5772/intechopen.95023},
+  publisher = {{IntechOpen}},
+  booktitle = {Quantum Computing and Communications [Working Title]}
+}
 @article{Vaitiekenas_2020,
    title={Flux-induced topological superconductivity in full-shell nanowires},
    author={Vaitiekėnas, S. and Winkler, G. W. and van Heck, B. and Karzig, T. and Deng, M.-T. and Flensberg, K. and Glazman, L. I. and Nayak, C. and Krogstrup, P. and Lutchyn, R. M. and et al.},
