--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -145,6 +145,12 @@
    journal={Nature Physics},
    publisher={Springer Science and Business Media LLC}
 }
+@misc{Brassard_2011,
+      title={An optimal quantum algorithm to approximate the mean and its application for approximating the median of a set of points over an arbitrary distance}, 
+      author={Gilles Brassard and Frederic Dupuis and Sebastien Gambs and Alain Tapp},
+      year={2011},
+      eprint={1106.4267}
+}
 @article{Elzerman_2004,
    title={Single-shot read-out of an individual electron spin in a quantum dot},
    author={Elzerman, J. M. and Hanson, R. and Willems van Beveren, L. H. and Witkamp, B. and Vandersypen, L. M. K. and Kouwenhoven, L. P.},
@@ -250,6 +256,12 @@
    pages={433},
    journal={Quantum},
    publisher={Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften}
+}
+@misc{Griffin_2020,
+  title={Investigation of quantum algorithms for direct numerical simulation of the Navier-Stokes equations},
+  author={K. Griffin and Suhas S. Jain and T. Flint and W. R. Chan},
+  year={2020},
+  url={http://web.stanford.edu/~sjsuresh/griffin_2019.pdf}
 }
 @article{Hensen_2015,
   title = {Loophole-free Bell inequality violation using electron spins separated by 1.3 kilometres},
@@ -371,6 +383,19 @@
   journal = {Scientific Reports},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{Montanaro_2016,
+  title = {Quantum algorithms: an overview},
+  author = {Ashley Montanaro},
+  year = {2016},
+  month = jan,
+  doi = {10.1038/npjqi.2015.23},
+  url = {https://www.nature.com/articles/npjqi201523.pdf},
+  eprint = {1511.04206},
+  volume = {2},
+  number = {1},
+  journal = {npj Quantum Information},
+  publisher = {Springer Science and Business Media {LLC}}
+}
 @article{OBrien_2019,
    title={Calculating energy derivatives for quantum chemistry on a quantum computer},
    author={O’Brien, Thomas E. and Senjean, Bruno and Sagastizabal, Ramiro and Bonet-Monroig, Xavier and Dutkiewicz, Alicja and Buda, Francesco and DiCarlo, Leonardo and Visscher, Lucas},
@@ -415,6 +440,18 @@
   author={Navamita Ray and Tirtha Banerjee and Balasubramanya Nadiga and Satish Karra},
   year={2019},
   eprint={1904.09033}
+}
+@InProceedings{Sammak_2015,
+  title="Quantum Computing and Its Potential for Turbulence Simulations",
+  author="Sammak, S. and Nouri, A. G. and Ansari, N. and Givi, P.",
+  year="2015",
+  doi = {10.1007/978-3-319-25058-8_13},
+  url = {http://dx.doi.org/10.13140/RG.2.1.2273.6089},
+  isbn="978-3-319-25058-8",
+  booktitle="Mathematical Modeling of Technological Processes",
+  pages="124--132",
+  editor="Danaev, Nargozy and Shokin, Yurii and Darkhan, Akhmed-Zaki",
+  publisher="Springer International Publishing"
 }
 @article{Shalm_2015,
   title = {Strong Loophole-Free Test of Local Realism},
@@ -500,6 +537,30 @@
   numpages = {0},
   journal = {Phys. Rev. Lett.},
   publisher = {American Physical Society}
+}
+@article{Xu_2018,
+  title = {Turbulent Mixing Simulation via a Quantum Algorithm},
+  author = {Guanglei Xu and Andrew J. Daley and Peyman Givi and Rolando D. Somma},
+  year = {2018},
+  month = feb,
+  doi = {10.2514/1.j055896},
+  volume = {56},
+  number = {2},
+  pages = {687--699},
+  journal = {{AIAA} Journal},
+  publisher = {American Institute of Aeronautics and Astronautics ({AIAA})}
+}
+@article{Xu_2019,
+  title = {Quantum algorithm for the computation of the reactant conversion rate in homogeneous turbulence},
+  author = {Guanglei Xu and Andrew J. Daley and Peyman Givi and Rolando D. Somma},
+  year  = {2019},
+  doi = {10.1080/13647830.2019.1626025},
+  url = {https://core.ac.uk/download/pdf/226757452.pdf},
+  volume = {23},
+  number = {6},
+  pages = {1090-1104},
+  journal = {Combustion Theory and Modelling},
+  publisher = {Taylor & Francis}
 }
 @article{Zurek2003,
   title = {Decoherence, einselection, and the quantum origins of the classical},
