bell: interpretation of CHSH inequality and EPR experiments.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -151,6 +151,20 @@
       year={2011},
       eprint={1106.4267}
 }
+@article{EPR_1935,
+  title = {Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
+  author = {Einstein, A. and Podolsky, B. and Rosen, N.},
+  year = {1935},
+  month = {May},
+  doi = {10.1103/PhysRev.47.777},
+  url = {https://journals.aps.org/pr/pdf/10.1103/PhysRev.47.777},
+  volume = {47},
+  issue = {10},
+  pages = {777--780},
+  numpages = {0},
+  journal = {Phys. Rev.},
+  publisher = {American Physical Society}
+}
 @article{Elzerman_2004,
    title={Single-shot read-out of an individual electron spin in a quantum dot},
    author={Elzerman, J. M. and Hanson, R. and Willems van Beveren, L. H. and Witkamp, B. and Vandersypen, L. M. K. and Kouwenhoven, L. P.},
