--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -8,6 +8,15 @@
   journal = {Physics},
   publisher = {American Physical Society}
 }
+@incollection{BornEinsteinLetters,
+  title       = "Letter to {M}ax {B}orn, 1926",
+  author      = "Einstein, Albert",
+  ISBN = {978-1-4039-4496-2},
+  url = {https://www.springer.com/de/book/9781403944962},
+  booktitle   = "Born-Einstein Letters, 1916-1955",
+  year        = 2005,
+  publisher   = "Palgrave Macmillan US"
+}
 @MISC{Clarke_2020,
     title={Towards a Large-scale Quantum Computer Using Silicon Spin Qubits},
     author={Clarke, James},
