mlearn: deep quantum neural networks.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -23,6 +23,18 @@
   journal = {Nature},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{Beer_2020,
+  title = {Training deep quantum neural networks},
+  author = {Kerstin Beer and Dmytro Bondarenko and Terry Farrelly and Tobias J. Osborne and Robert Salzmann and Daniel Scheiermann and Ramona Wolf},
+  year = {2020},
+  month = feb,
+  doi = {10.1038/s41467-020-14454-2},
+  url = {https://www.nature.com/articles/s41467-020-14454-2.pdf},
+  volume = {11},
+  number = {1},
+  journal = {Nature Communications},
+  publisher = {Springer Science and Business Media {LLC}}
+}
 @article{Biamonte_2017,
    title={Quantum machine learning},
    author={Biamonte, Jacob and Wittek, Peter and Pancotti, Nicola and Rebentrost, Patrick and Wiebe, Nathan and Lloyd, Seth},
