algo/status: moved HHL, added QAOA and linked to applications in complements ; balanced opinions.

--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -17,6 +17,15 @@
   year        = 2005,
   publisher   = "Palgrave Macmillan US"
 }
+@article{Brant_2020,
+ title   = {Quantum Computing: A Bubble Ready to Burst?},
+ author  = {Brant, Tom},
+ year = {2020},
+ date    = {2020-11-11},
+ urldate = {2021-06-05},
+ url     = {https://uk.pcmag.com/news/129895/quantum-computing-a-bubble-ready-to-burst},
+ journal = {PC Mag UK}
+}
 @MISC{Clarke_2020,
     title={Towards a Large-scale Quantum Computer Using Silicon Spin Qubits},
     author={Clarke, James},
@@ -25,6 +34,24 @@
     URL={https://hotchips.org/archives/hc32/},
     howpublished={"Hot Chips 32" Conference Archive},
     journal={Hot Chips 32 Conference}
+}
+@article{Fawaz_2021,
+    title = {Knocking on {T}uring’s door: {Q}uantum {C}omputing and {M}achine {L}earning},
+    author = {Fawaz, Ather},
+    year = {2021},
+    date = {2021-01-02},
+    urldate = {2021-06-05},
+    url = {https://thegradient.pub/knocking-on-turings-door-quantum-computing-and-machine-learning},
+    journal = {The Gradient}
+}
+@article{Horgan_2021,
+ title   = {Will Quantum Computing Ever Live Up to Its Hype?},
+ author  = {Horgan, John},
+ year = {2021},
+ date    = {2021-04-20},
+ urldate = {2021-06-05},
+ url     = {https://www.scientificamerican.com/article/will-quantum-computing-ever-live-up-to-its-hype},
+ journal = {Scientific American}
 }
 @MISC{IQCQH_2020,
     title={Introduction to {Q}uantum {C}omputing and {Q}uantum {H}ardware},
